--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ hooks:
 </div>
 
 <footer>
-  &copy; 2025 SmartDeploy Project. Built with ❤️ by George Kirima.
+  &copy; 2025 SmartDeploy Project. Built with ❤️ by George Kirima. All rights reserved.  
 </footer>
 
 </body>
